x86/paravirt: allow paravirt-ops patching post-init
paravirt_ops patching is used to accelerate ops by annotating them at
compile time (via PVOP.* macros) such that all their callsites can be
patched in the kernel (and modules) at init so as to avoid the cost of
indirect calls.  In some cases, the target op is inlined at the
callsite.

To allow this to happen post-init, we now persist the subset of
interest in .parainstructions.runtime.

Signed-off-by: Ankur Arora <ankur.a.arora@oracle.com>

--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -764,6 +764,13 @@ config PARAVIRT
 	  over full virtualization.  However, when run without a hypervisor
 	  the kernel is theoretically slower and slightly larger.
 
+config PARAVIRT_RUNTIME_PATCH
+	bool "Enable runtime paravirtualization"
+	depends on PARAVIRT
+	---help---
+	  This changes the paravirtualized kernel based on changed host
+	  conditions, potentially improving performance significantly.
+
 config PARAVIRT_XXL
 	bool
 
@@ -797,6 +804,7 @@ config KVM_GUEST
 	depends on PARAVIRT
 	select PARAVIRT_CLOCK
 	select ARCH_CPUIDLE_HALTPOLL
+	select PARAVIRT_RUNTIME_PATCH
 	default y
 	---help---
 	  This option enables various optimizations for running under the KVM
