--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -466,6 +466,14 @@ config PVPANIC
 	  a paravirtualized device provided by QEMU; it lets a virtual machine
 	  (guest) communicate panic events to the host.
 
+config PVREENLIGHTEN
+	tristate "pvreenlighten device support"
+	depends on ACPI && KVM_GUEST && X86
+	help
+	  This driver provides support for the pvreenlighten device.
+	  pvreenlighten is a paravirtualized device provided by QEMU; it lets
+	  the host communicate feature changes to the guest virtual machine.
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
