x86/kvm: add arch reenlightment notify
This allows x86 kvm guest to trigger the reenlightment, query
CPUID etc. It also prints the value of KVM_HINTS_REALTIME for
easier validation.

Signed-off-by: Joao Martins <joao.m.martins@oracle.com>
Signed-off-by: Ankur Arora <ankur.a.arora@oracle.com>

--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -805,6 +805,7 @@ config KVM_GUEST
 	select PARAVIRT_CLOCK
 	select ARCH_CPUIDLE_HALTPOLL
 	select PARAVIRT_RUNTIME_PATCH
+	select ARCH_PVREENLIGHT
 	default y
 	---help---
 	  This option enables various optimizations for running under the KVM
@@ -818,6 +819,12 @@ config ARCH_CPUIDLE_HALTPOLL
         prompt "Disable host haltpoll when loading haltpoll driver"
         help
 	  If virtualized under KVM, disable host haltpoll.
+
+config ARCH_PVREENLIGHT
+        def_bool n
+        prompt "Handle reenlightement notifications from host"
+        help
+	  If virtualized under KVM, reprobe CPUID and update paravirt ops.
 
 config PVH
 	bool "Support for running PVH guests"
